--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="auyhor" content="E.Ернар">
 
 		<title>ВКонтакте</title>
-
+		<link rel="favicon.ico" href="https://webdevernar.github.io">
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="css/animate.css">
